--- a/pro/view/share/rightMenu.html
+++ b/pro/view/share/rightMenu.html
@@ -1,6 +1,6 @@
 <div id="mySidenav" class="sidenav">
-    <a href="#">About</a>
-    <a href="#">Services</a>
-    <a href="#">Clients</a>
-    <a href="#">Contact</a>
+    <a href="addGroup.php">اضافه کردن گروه</a>
+    <a href="showGroup.php">مشاهده همه گروه ها</a>
+    <a href="addProduct.php">اضافه کردن محصول</a>
+    <a href="showProduct.php">مشاهده محصولات</a>
 </div>
