--- a/pro/view/login.html
+++ b/pro/view/login.html
@@ -1,52 +1,25 @@
-<!DOCTYPE html>
+<form class="login100-form" action="index.php" method="post">
+    <span class="login100-form-title"> Log in </span>
+    <span><?php echo $message; ?></span>
 
-<head>
-    <title>Login</title>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
-    <link rel="stylesheet" href="../css/login.css" />
-</head>
-
-<body>
-
-    <div class="limiter">
-        <div class="container-login100" style="background-image: url('../images/images.png');">
-            <div class="wrap-login100">
-                <form class="login100-form">
-                    <span class="login100-form-title">
-						Log in
-					</span>
-
-                    <div class="wrap-input100">
-                        <input class="input100" type="text" name="username" placeholder="Username">
-
-                    </div>
-
-                    <div class="wrap-input100">
-                        <input class="input100" type="password" name="pass" placeholder="Password">
-                    </div>
-
-
-                    <div class="container-login100-form-btn">
-                        <button class="login100-form-btn">
-							Login
-						</button>
-                    </div>
-                    <br>
-                    <div class="text-center">
-                        <a class="txt1" href="forget_pass.php">
-							Forgot Password?
-						</a>
-                    </div>
-                </form>
-            </div>
-        </div>
+    <div class="wrap-input100" >
+        <input class="input100" type="text" name="_Username" placeholder="Username" value="<?php echo $_Username; ?>">
+       
     </div>
 
+    <div class="wrap-input100">
+        <input class="input100" type="password" name="_Password" placeholder="Password">
+       
+    </div>
 
-    <div id="dropDownSelect1"></div>
-
-
-</body>
-
-</html>
+    <div class="container-login100-form-btn">
+        <button class="login100-form-btn" name="_Login">Login</button>
+    </div>
+    <br>
+    <div class="text-center">
+        <a class="txt1" href="forget_pass.php">
+            Forgot Password?
+        </a>
+    </div>
+</form>
+            
