change mainpage.php and change addgrouping.php

--- a/pro/view/addGroup.html
+++ b/pro/view/addGroup.html
@@ -1,6 +1,7 @@
-<div class="">
+<div class="" action="addGroup.php" method="post">
     <span><?php echo $Message; ?></span>
-    <label>نام گروه مورد نظر خورد را وارد کنید</label>
-    <input  id= "roupName" type="text"  />
-    </div>
+    <label>enter new group name</label>
+    <input  id= "groupName" type="text"  />
+    <button class="login100-form-btn" name="_add">conferm</button>
+    
 </div>
