--- a/pro/view/share/rightMenu.html
+++ b/pro/view/share/rightMenu.html
@@ -1,6 +1,6 @@
 <div id="mySidenav" class="sidenav">
-    <a href="addGroup.php">اضافه کردن گروه</a>
-    <a href="showGroup.php">مشاهده همه گروه ها</a>
-    <a href="addProduct.php">اضافه کردن محصول</a>
-    <a href="showProduct.php">مشاهده محصولات</a>
+    <a href="addGroup.php">add group</a>
+    <a href="showGroup.php">show all groups</a>
+    <a href="addProduct.php">add product</a>
+    <a href="showProduct.php">show all products</a>
 </div>
