--- a/pro/css/mainPage.css
+++ b/pro/css/mainPage.css
@@ -36,6 +36,21 @@
 .search{
     width: 100%;
     height: 80px;
-    justify-content: center;
+    margin: 10px;
+            
+}
+
+.search input{
+  position: absolute;
+  right: 0px;
+  width: 18%;
+  margin: 20px 10px;
+}
+
+.welcom{
+  
+  font-size: 25px;
+  color: purple;
+  
 }
 
