--- a/pro/view/share/mainHeader.html
+++ b/pro/view/share/mainHeader.html
@@ -4,5 +4,25 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" href="css/mainPage.css" />
+    <link rel="stylesheet" href="css/add.css">
 </head>
 <body>
+    <script src="js/angular/angular.js"></script>
+    <script src="js/jquery/jquery.js"></script>
+    <script src="js/bootstrap/ui-bootstrap-tpls-0.11.0.js"></script>
+    <script src="js/jquery/jquery.min.js"></script>
+    <script src="js/jquery/jquery-ui.min.js"></script>
+    <script src="js/angular/angular-resource.js"></script>
+    <div id="mySidenav" class="sidenav">
+        <div class="search">
+        <input type="text" placeholder="Search..."  />
+        
+        </div>
+        <a href="addGroup.php">add group</a>
+        <a href="showGroup.php">show all groups</a>
+        <a href="addProduct.php">add product</a>
+        <a href="showProduct.php">show all products</a>
+    </div>
+    <div class="imagehedear" style="background-image: url('images/imagehedear.png');">
+    </div>    
+    
