--- a/pro/css/mainPage.css
+++ b/pro/css/mainPage.css
@@ -1,14 +1,15 @@
 .sidenav {
-  height: 100%;
-  width: 20%;
-  position: fixed;
-  right: 0;
-  background-color: gainsboro;
-  
- }
- body{
-     margin: 0px;
- }
+    height: 100%;
+    width: 20%;
+    position: absolute;
+    top: 31%;
+    right: 10px;
+    background-color: gainsboro;
+}
+
+body {
+    margin: 0px;
+}
 
 .sidenav a {
     padding: 30px 8px 8px 32px;
@@ -16,45 +17,52 @@
     font-size: 25px;
     color: purple;
     display: block;
-    
-  }
-  
-  .sidenav a:hover {
+}
+
+.sidenav a:hover {
     color: black;
-  }
-  input:not([type="image" i]) {
+}
+
+input:not([type="image" i]) {
     box-sizing: border-box;
     border: black solid 2px;
     border-radius: 5px;
-    width: 250px;
+    width: 200px;
     height: 40px;
     padding: 10px;
     margin: 20px;
-     
 }
- 
-.search{
+
+
+.imagehedear {
     width: 100%;
-    height: 80px;
-    margin: 10px;
-            
+    height: 30%;
+    background-repeat: no-repeat;
+    background-position: center;
+    background-size: 100% 200px;
 }
 
-.search input{
-  position: absolute;
-  right: 0px;
-  width: 18%;
-  margin: 20px 10px;
+.show_pro {
+    width: 75%;
+    height: auto;
 }
 
-.welcom{
-  
-  font-size: 25px;
-  color: purple;
-  
+.p {
+    width: 75%;
+    height: auto;
 }
 
-.padd{
-  display: none;
+.list {
+    width: 74%;
+    height: 300px;
 }
 
+image {
+    width: 200px;
+    height: 200px;
+}
+
+details {
+    widows: 400px;
+    height: 200px;
+}
